[package]
name = "mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
